themes/default/css/index.css
/* ... */
/* Level 1 hover effects. */
.dropmenu li a:hover, .dropmenu li:hover a, .dropmenu li a:focus {
/* 	background: #597b9f; */
	border: 1px solid #4a6b8c;
	color: #333;
	cursor: pointer;
	text-decoration: none;
	box-shadow: 0 4px 4px rgba(255,255,255,0.1) inset;
}
/* Level 1 active button. */
.dropmenu li a.active:hover, .dropmenu li:hover a.active {
/* 	background: orange; */
	border: 1px solid #4a6b8c;
	color: #333;
	box-shadow: 0 5px 5px rgba(255,255,255,0.2) inset;
	text-shadow: none;
}
/* This CSS is for adding top level subsection indicators, just in case anyone wants them. */
/* I'm not that keen on them, but perhaps the commented code should be left as a handy demo. */
/*
#menu_nav>li.subsections>a, #admin_menu .dropmenu>li.subsections>a {
	padding: 0 17px 0 7px;
	background: url(../images/selected_open.png) no-repeat 96% 60%;
}
#menu_nav>li.subsections>a.active, #admin_menu .dropmenu>li.subsections>a.active {
	background: orange url(../images/selected_open.png) no-repeat 96% 60%;
}
#menu_nav>li.subsections>a:hover, #menu_nav>li.subsections:hover>a, #menu_nav>li.subsections>a:focus,
#admin_menu .dropmenu>li.subsections>a:hover, #admin_menu .dropmenu>li.subsections:hover>a, #admin_menu .dropmenu>li.subsections>a:focus {
	background: #597b9f url(../images/selected_open.png) no-repeat 96% 60%;
}
#menu_nav li.subsections>a.active:hover, #menu_nav li.subsections:hover>a.active, #menu_nav li.subsections>a.active:focus,
#admin_menu .dropmenu>li.subsections>a.active:hover, #admin_menu .dropmenu>li.subsections:hover>a.active, #admin_menu .dropmenu>li.subsections>a.active:focus {
	background: orange url(../images/selected_open.png) no-repeat 96% 60%;
}
*/
/* Levels 2 and 3 submenu wrapper. */
.dropmenu li ul {
	z-index: 90;
	position: absolute;
	top: 2.25em;
	left: -9999px;
	width: 18.2em;
	padding: 0.5em;
	font-weight: normal;
	background: #fff;
	border: solid 1px #999;
	border-left: solid 1px #bbb;
	border-top: solid 1px #ccc;
	border-radius: 2px 2px 2px 2px;
	box-shadow: 3px 3px 4px rgba(0,0,0,0.3);
}
/* Level 2 link background. */
.dropmenu li li {
	margin: 0;
	padding: 0;
	width: 17em;
	position: relative;
	float: none;
	font-size: 1em;
	border-radius: 3px;
	border: 1px solid transparent;
}
.dropmenu li li a {
	position: relative;
	line-height: 2.2em;
	padding: 0 7px;
	display: block;
	color: #666;
}
.dropmenu li li a>img {
	vertical-align: middle;
	margin: 0 0 0 -4px;
}
/* Note: The next declarations are for keyboard access with js disabled. */
.dropmenu ul a:focus, .dropmenu ul ul a:focus {
	margin-left: 9990px;
	border: none;
	width: 17em;
}
.dropmenu ul ul a:focus {
	margin-left: 19950px;
}
/* Cancel those for hover and/or js access. */
.dropmenu ul li:hover a:focus, .dropmenu ul li.sfhover a:focus {
	margin-left: 0;
	width: auto;
}
/* Necessary to allow highlighting of 1st level while hovering over submenu. */
.dropmenu li:hover li a, .dropmenu li.sfhover li a {
	padding: 1px 9px;
	background: none;
	color: #666;
	border: none;
}
.dropmenu li:hover li:hover a, .dropmenu li.sfhover li:hover a {
	padding: 0 9px;
}
/* Level 3 submenu wrapper positioning. */
.dropmenu li ul ul, .dropmenu li.sfhover ul ul {
	margin: -2em 0 0 15.3em;
}
/* Level 3 maintains font-size the same as Level 2. */
.dropmenu li li li a {
	font-size: 1em;
}
/* Levels 2 and 3 hover effects. */
.dropmenu li li:hover, .adm_section .dropmenu li li:hover {
	border: 1px solid #cfcfcf;
	border-top: 1px solid #d4dee6;
	border-bottom: 1px solid #cbdae6;
/* 	background: #e3e9ef url(../images/theme/lower_section.png) 0 0 repeat-x; */
}
.dropmenu li li:hover>a, .dropmenu li li.sfhover a:focus, .dropmenu li li a:hover, .dropmenu li li a:focus {
	color: #333;
	text-decoration: none;
	border: 1px solid #4a6b8c;
/* 	background: #e3e9ef url(../images/theme/lower_section.png) 0 0 repeat-x; */
}
/* Reposition Level 2 submenu as visible on hover. */
.dropmenu li:hover ul, .dropmenu li.sfhover ul {
	left: 0;
}
/* Hiding Level 3 submenu off hover. */
.dropmenu li:hover ul ul, .dropmenu li.sfhover ul ul, .dropmenu li:hover ul ul ul, .dropmenu li.sfhover ul ul ul {
	left: -9999px;
}
/* Reposition as visible on hover. */
.dropmenu li li:hover ul, .dropmenu li li.sfhover ul {
	left: -14px;
}
.dropmenu li li.subsections a:after, .adm_section .dropmenu li.subsections a:after{
	position: absolute;
	top: 0.4em;
	right: 2px;
	width: 12px;
	height: 12px;
	content: "";
	background: url(../images/admin/subsection.png) no-repeat;
}
.dropmenu li li.subsections li a:after, .adm_section .dropmenu li.subsections li a:after{
	display: none;
}
/* Highlighting of current section */
.dropmenu li li .chosen {
	font-weight: bold;
}

/* The extra menu rows for admin sections, etc. */
#adm_submenus {
	margin: 0;
	padding: 10px 15px 0 15px;
	overflow: hidden;
}

/* Styles for sidebar menus.
------------------------------------------------------- */

#main_container {
	position: relative;
}
#main_container:after {
	content:"";
	display: block;
	clear: both;
}
#main_admsection {
	position: relative;
	left: 0;
	right: 0;
	overflow: auto;
}
#left_admsection {
	width: 180px;
	float: left;
	padding: 0 10px 1em 0;
}
.adm_section .cat_bar {
	background: #f0f4f7;
	border: 1px solid #c8c8c8;
	border-left: 1px solid #d8d8d8;
	border-top: 1px solid #e2e2e2;
	border-radius: 4px 4px 0 0;
	box-shadow: 0 -2px 4px rgba(0,0,0,0.07) inset;
	margin: 0;
}
.adm_section h4.catbg {
	padding: 6px 8px;
	font-size: 1em;
	color: #444;
	text-shadow: none;
}
.adm_section .dropmenu {
	padding: 4px 1px 9px 1px;
	background: #fff url(../images/theme/upper_section.png) 0 -50px repeat-x;
	float: none;
}
.adm_section .dropmenu li {
	margin: 2px 0;
	padding: 0;
	line-height: 1.7em;
	border: 1px solid transparent;
	border-radius: 2px;
	float: none;
}
/* ... */

